# fudgelang_cpp

./: .gitignore  CMakeLists.txt
fudge/: CMakeLists.txt
fudge/api/core/: core.h
fudge/api/fudge/: fudge.h
fudge/source/: fudge.cpp
fudge/source/ast/: ast.cpp  ast.h
fudge/source/input/: bufferedinputstream.h  source.h
fudge/source/output/: log.h
fudge/source/parser/: parser.cpp  parser.h
fudge/source/scanner/: scanner.cpp  scanner.h  token.h
fudge/test/: inputtests.cpp  scannertests.cpp
fudge/tests/: inputtests.cpp
fudge/tests/parsertests/: basicparsertests.cpp  parsertestutils.cpp  parsertestutils.h
fudge/tests/scannertests/: basicscantests.cpp  commentstests.cpp  scannertestutils.cpp  scannertestutils.h
fudgecli/: CMakeLists.txt
fudgecli/source/: main.cpp
tests/: CMakeLists.txt
